2007-03-27  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Geoff.

        Add NPN_InvokeDefault test.
        
        * plugins/netscape-invoke-default-expected.txt: Added.
        * plugins/netscape-invoke-default.html: Added.

2007-03-27  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin
        
        <rdar://problem/5091898> REGRESSION: GMail Editor: A line of underlined text copied with Select All pastes with wrong font family

        Demonstrates the bug fixed:
        * editing/style/5091898-expected.checksum: Added.
        * editing/style/5091898-expected.png: Added.
        * editing/style/5091898-expected.txt: Added.
        * editing/style/5091898.html: Added.
        Demonstrates a related bug fixed (deleting
        the line break before a paragraph could remove
        its underlining):
        * editing/deleting/5091898-expected.checksum: Added.
        * editing/deleting/5091898-expected.png: Added.
        * editing/deleting/5091898-expected.txt: Added.
        * editing/deleting/5091898.html: Added.
        Demonstrates that a link now (correctly) exists, 
        instead of just underlined text:
        * editing/pasteboard/4840662-expected.txt:

2007-03-26  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin
        
        <rdar://problem/5065910> REGRESSION: In Mail and GMail, Can't apply color to pasted line of text
        <rdar://problem/5084241> After deleting a paragraph of colored text, can't change text color
        <rdar://problem/5065605> REGRESSION: Text copied with Select All + Copy loses color on Paste
        <rdar://problem/4916887> GMAIL: Can't apply color to text once it becomes indented

        * editing/pasteboard/5065605-expected.checksum: Added.
        * editing/pasteboard/5065605-expected.png: Added.
        * editing/pasteboard/5065605-expected.txt: Added.
        * editing/pasteboard/5065605.html: Added.
        * editing/style/4916887-expected.checksum: Added.